<resources>
    <string name="app_name">Controle de NF</string>


    <string name="default_error">Houve um erro ao logar. Tente novamente!</string>
    <string name="your_data">Seus dados</string>
    <string name="register_success">Salvo com sucesso!</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_preferences">Preferências</string>
    <string name="history">Histórico</string>
    <string name="filter">Filtrar por ano</string>
    <string name="invoice_number">Número da NF</string>
    <string name="competency_month">Mês de competência</string>
    <string name="billing_date">Data de recebimento</string>
    <string name="payment_date">Data de pagamento</string>
    <string name="competency_date">Data de competência</string>
    <string name="save">Salvar</string>
    <string name="expense_category">Categoria de despesa</string>
    <string name="description">Descrição</string>
    <string name="partner_company">Empresa parceira</string>
    <string name="dashboard_year_filter"><![CDATA[<b>Dados do ano:</b>]]> %1$d</string>

    <!-- Chart descriptions -->
    <string name="available_billing">Faturamento\ndisponível</string>
    <string name="invoice_entries">Entrada\nde valores</string>
    <string name="expenses">Despesas</string>
    <string name="expenses_by_category">Despesas\npor categoria</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1274602913175701</string>
    <string name="facebook_client_token">e903a83beb82b0b569c4bd8bea9903ae</string>

    <!-- FAB -->
    <string name="add_expense">Lançar despesa</string>
    <string name="add_invoice">Lançar NF</string>

    <!-- Sign in and Log in -->
    <string name="sign_facebook">Continuar com Facebook</string>
    <string name="sign_google">Continuar com Google</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login in with Google</string>
    <string name="login_title">Insira seu e-mail e senha</string>
    <string name="keep_connected">Manter conectado</string>
    <string name="continue_button">Continue</string>
    <string name="category">Categoria</string>
    <string name="company">Empresa</string>
    <string name="name">Nome</string>
    <string name="document">CNPJ</string>
    <string name="fantasy_name">Nome fantasia</string>
    <string name="company_name">Razão social</string>
    <string name="choose_signin_method">Escolha um método de cadastro</string>
    <string name="email_register">Cadastrar com e-mail</string>
    <string name="or">ou</string>
    <string name="alread_registered">Já tem cadastro? Clique aqui.</string>
    <string name="signin_form_title">Preencha os dados abaixo para finalizarmos o cadastro</string>
    <string name="email">E-mail</string>
    <string name="full_name">Nome completo</string>
    <string name="phone">Telefone</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="billing_limit">Limite de faturamento</string>

    <string-array name="preference_items">
        <item>Empresas parceiras</item>
        <item>Categorias de despesas</item>
        <item>Alerta de faturamento</item>
    </string-array>

    <string-array name="months">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string-array name="years">
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

</resources>