<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin32"
            tools:context=".presentation.fragment.SignInFormFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signin_form_title"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin32"
                android:nextFocusDown="@id/inputName">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/inputCnpj">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputCnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/inputCompanyName">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtCnpj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/inputPhone">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/fantasy_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/inputPassword">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:nextFocusDown="@id/inputPasswordConfirm">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputBase"
                android:id="@+id/inputPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CleanEditText"
                    android:id="@+id/edtPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/billing_limit"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="500"
                android:valueFrom="0"
                app:trackHeight="@dimen/margin8"
                app:labelBehavior="floating"
                app:tickVisible="true" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:text="@string/keep_connected"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:enabled="false"
                android:text="@string/continue_button"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>