<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragment.RegisterInvoiceFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin32"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            style="@style/TextView.InputLabel" />

        <androidx.appcompat.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/companySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputBase"
            android:id="@+id/inputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:nextFocusDown="@id/inputNumber">

            <com.blackcat.currencyedittext.CurrencyEditText
                style="@style/CleanEditText"
                android:id="@+id/edtValue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:padding="@dimen/margin8"
                android:imeOptions="actionNext"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputBase"
            android:id="@+id/inputNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:nextFocusDown="@id/inputPaymentDate">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CleanEditText"
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/invoice_number"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLength="8"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputBase"
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:nextFocusDown="@id/inputCompetencyDate">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CleanEditText"
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/competency_month"
            style="@style/TextView.InputLabel" />

        <androidx.appcompat.widget.AppCompatSpinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/monthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputBase"
            android:id="@+id/inputPaymentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CleanEditText"
                android:id="@+id/edtReceiveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/billing_date"
                android:imeOptions="actionDone"
                android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:text="@string/save"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkAutoLogin"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>